index.css
body {
  font-family: "Cinzel", serif;
  font-size: 20px;
  letter-spacing:2px;
}

.Navbar {
  background-color: #000000;
  height: 100px;
  display: flex;
  font-family: "Cinzel";
  position: fixed;
  width: 100%;
  top:0;

}
.Navbar__Link {
  padding-top: 40px;
  padding-right: 30px;
  color: rgb(209, 178, 8);
}
.Navbar__Items {
  display: flex;
}
.Navbar__Items--right {
  margin-left:auto;
}
.Navbar__Link-toggle {
  display: none;
}

.Navbar__Link-brand img{
  padding-left: 20px;
  height: 100px;

}

.Navbar__Link a {
  text-decoration: none;
  color: rgb(209, 178, 8);
}
/*.Navbar__Link-brand{
  padding-left: -16px;
  padding-top: -16px;
}*/

@media only screen and (max-width: 768px) {
  .Navbar__Items,
  .Navbar {
    flex-direction: column;
  }
.Navbar__Items {
    display:none;
    padding-right: 15px;
  }
.Navbar__Items--right {
    margin-left:0;
  }
.Navbar__ToggleShow {
    display: flex;
  }
.Navbar__Link-toggle {
    align-self: flex-end;
    display: initial;
    position: absolute;
    cursor: pointer;
   }
}

.imageHolder{
  height: 80vh;
  background:
  url(1.jpeg) center no-repeat;
  background-size: cover;
  padding-top: 280px;
}

#us{
  margin: 0 auto;
  max-width: 800px;
  padding-top: 50px;
  padding-bottom: 50px;
  font-family: "Cinzel";
  font-size: 20px;
}


.menu {

  margin: 0 auto;
  max-width: 600px;
  padding: 1em;
  text-transform: uppercase;
  font-family: "Cinzel", serif;
  font-size: 20px;
  letter-spacing:2px;

}

.menu__section td + td {
  padding-left: 1em;
  padding-bottom: 15px;

}

.menu__header * + * {
  margin: 0.4em 0;
}

.menuTitle {
  border-style: solid;
  border-left: 0px;
  border-right: 0px;
  border-color: rgb(209, 178, 8);
  width: 100%;
  padding-bottom: 20px;
padding-top: 20px;
}

.menu__item--price{
  vertical-align:bottom;

}

.menu p{
  font-size: 15px;

}
.container {
    padding-top: 30px;
    padding-bottom: 30px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    /*width: 100%;
  height: 100vh;*/
  -webkit-flex-wrap: wrap;



}

.left{
  flex: 1;
  max-width: 400px;
  font-family: "Cinzel", serif;
  font-size: 20px;
  letter-spacing:2px;
  font-weight: lighter;
  padding-bottom: 50px;

}

.left a{
  text-decoration: none;
  color: black;
}
.flex-item{
  /*flex: 1;*/
  margin-right: 10px;



  /*width: 0;*/
  &:last-child {
    margin-right: 0;
  }
}



.right {
  /* flex: 2; */
  background-size: cover;
background-position: center;
background-repeat: no-repeat;
  background-image: url(map.jpeg);
  min-width: 400px;
  min-height: 400px;
}






/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
/*@media screen and (max-width: 600px) {
    .column, input[type=submit] {
        width: 100%;
        margin-top: 0;
    }
}*/

